# String

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
src/: BasicString.hpp
test/: CMakeLists.txt  test-allocator.cpp  test-capacity.cpp  test-construct.cpp  test-element-access.cpp  test-modifiers.cpp  test-string-operations.cpp
